src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@font-face {
  font-family: 'AvenirBold';
  src: local("AvenirBold"), url('./fonts/AvenirLTStd-Black.otf') format("otf");
  /* font-weight: bold; */
}

@font-face {
  font-family: 'AvenirBook';
  src: local("AvenirBook"), url('./fonts/AvenirLTStd-Book.otf') format("otf");
  /* font-weight: normal; */
}

@font-face {
  font-family: 'AvenirRoman';
  src: local("AvenirRoman"), url('./fonts/AvenirLTStd-Roman.otf') format("otf");
  /* font-weight: bold; */
}


.avenirBold {
  font-family: 'AvenirBold'
}

.avenirBook {
  font-family: 'AvenirBook'
}

.avenirRoman {
  font-family: 'AvenirRoman'
}


@layer utilities {

  .flex-center {
    @apply flex justify-center items-center
  }

  .flex-between {
    @apply flex justify-between items-center
  }

  .nav-li {
    @apply md:text-[.9rem] text-[1.1rem] text-white font-[500] md:text-pry hover:text-pry md:hover:text-sec transition-all duration-300 hover:scale-110 cursor-pointer
  }

  /* thumb styles */
.thumb-slider .swiper-slide-thumb-active {
  @apply !overflow-hidden transition-all duration-700
}
}

